<resources>
    <string name="app_name">Acme Explorer</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="header_filters">Filters</string>
    <string name="min_price_filters">Min Price</string>
    <string name="max_price_filters">Max Price</string>
    <string name="title_filters">Title</string>
    <string name="input_min_date">Min Date</string>
    <string name="input_max_date">Max Date</string>
    <string name="picture_of_image">Picture of image</string>
    <string name="ticker">Ticker</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="current_ip">Current IP</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="action_add_trip">Add trip</string>
    <string name="action_save_trip">Save trip</string>
    <string name="action_view_map">View map</string>
</resources>