<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".trips.TripActivity">

    <ImageView
        android:id="@+id/trip_picture"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:alpha="1.0"
        android:contentDescription="@string/picture_of_image"
        android:scaleType="centerCrop" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/trip_picture"
        android:layout_margin="14dp"
        android:columnCount="2"
        android:rowCount="8"
        android:useDefaultMargins="true">

        <TextView
            android:id="@+id/trip_ticker_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ticker"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/trip_ticker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/trip_title_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/trip_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/trip_description_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/description"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/trip_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/trip_price_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/price"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/trip_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/trip_startDate_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/start_date"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/trip_startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/trip_endDate_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/end_date"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/trip_endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp" />

    </GridLayout>

</RelativeLayout>